add kitty config files

--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -174,7 +174,7 @@
             "car": "",
             "default": ["", "", ""]
         },
-        "on-click": "pavucontrol"
+        "on-click": "hyprpwcenter"
     },
       "pulseaudio/slider": {
     "min": 0,
