change kitty font

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,6 +1,6 @@
 # Font
-# font_family CaskaydiaCove Nerd Font Mono
-font_family JetBrainsMono Nerd Font
+font_family CaskaydiaCove Nerd Font Mono
+#font_family JetBrainsMono Nerd Font
 bold_italic_font auto
 font_size 11
 
