added new hyprland configs

--- a/hypr/.config/hypr/hyprsunset.conf
+++ b/hypr/.config/hypr/hyprsunset.conf
@@ -1,6 +1,23 @@
-# Makes hyprsunset do nothing to the screen by default
-# Without this, the default applies some tint to the monitor
+# Optional: Set the maximum gamma (in percent, absolute max is 201)
+max-gamma = 150
+
+# Daytime profile (neutral, no filter)
 profile {
-    time = 07:00
-    identity = true
+    time = 07:00       # 7:00 AM
+    temperature = 6500 # Neutral daylight (~6500K)
+    gamma = 1        # 100% = normal brightness
+}
+
+# Evening profile (mild warm filter)
+profile {
+    time = 18:00       # 6:00 PM
+    temperature = 4500 # Warmer, reduces blue light
+    gamma = 0.9         # Slightly dimmer
+}
+
+# Night profile (strong warm + dim for bedtime)
+profile {
+    time = 22:00       # 10:00 PM
+    temperature = 3000 # Very warm (orange-ish)
+    gamma = 0.75         # Noticeably dimmer for eye comfort
 }
