--- a/hypr/.config/hypr/looknfeel.conf
+++ b/hypr/.config/hypr/looknfeel.conf
@@ -1,23 +1,80 @@
-# Change the default Omarchy look'n'feel
+# ██╗      ██████╗  ██████╗ ██╗  ██╗       ██╗       ███████╗███████╗███████╗██╗     
+# ██║     ██╔═══██╗██╔═══██╗██║ ██╔╝       ██║       ██╔════╝██╔════╝██╔════╝██║     
+# ██║     ██║   ██║██║   ██║█████╔╝     ████████╗    █████╗  █████╗  █████╗  ██║     
+# ██║     ██║   ██║██║   ██║██╔═██╗     ██╔═██╔═╝    ██╔══╝  ██╔══╝  ██╔══╝  ██║     
+# ███████╗╚██████╔╝╚██████╔╝██║  ██╗    ██████║      ██║     ███████╗███████╗███████╗
+# ╚══════╝ ╚═════╝  ╚═════╝ ╚═╝  ╚═╝    ╚═════╝      ╚═╝     ╚══════╝╚══════╝╚══════╝
+
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
-general {
-    # No gaps between windows
-    # gaps_in = 0
-    # gaps_out = 0
+#$secondary = rgba(7daea3aa)
+#$outline_variant = rgba(32302fff)
 
-    # Use master layout instead of dwindle
-    # layout = master
+$secondary = rgba(88B381aa) rgba(D3BD97aa) 45deg
+$outline_variant = rgba(32302fff)
+
+
+general {
+    gaps_in = 5
+    gaps_out = 12
+    border_size = 2
+    col.active_border = $secondary
+    col.inactive_border = $outline_variant
+    resize_on_border = true
+    allow_tearing = false
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    # Use round window corners
     rounding = 4
+
+    blur {
+        enabled = true
+        size = 2
+        passes = 3
+        ignore_opacity = true
+        noise = 0.0117
+        contrast = 0.8916
+        brightness = 0.8172
+        xray = false
+        popups = true
+    }
 }
 
-# https://wiki.hypr.land/Configuring/Dwindle-Layout/
-dwindle {
-    # Avoid overly wide single-window layouts on wide screens
-    # single_window_aspect_ratio = 1 1
+##### App launcher
+layerrule = match:namespace wofi, blur on
+layerrule = match:namespace wofi, ignore_alpha 0
+layerrule = match:namespace wofi, animation slide bottom
+
+##### Top bar
+layerrule = match:namespace waybar, blur on
+layerrule = match:namespace waybar, ignore_alpha 0
+#layerrule = match:namespace swayosd, blur on
+#layerrule = match:namespace swayosd, ignore_alpha 0
+
+##### Notification
+#layerrule = match:namespace swaync-control-center, blur on
+#layerrule = match:namespace swaync-notification-window, blur on
+#layerrule = match:namespace swaync-control-center, ignore_alpha 0
+#layerrule = match:namespace swaync-notification-window, ignore_alpha 0
+#layerrule = match:namespace swaync-control-center, ignore_alpha 0.5
+#layerrule = match:namespace swaync-notification-window, ignore_alpha 0.5
+#layerrule = match:namespace swaync-control-center, animation slide right
+
+
+##### Style Gum confirm to match terminal theme
+#env = GUM_CONFIRM_PROMPT_FOREGROUND,6       # Cyan
+#env = GUM_CONFIRM_SELECTED_FOREGROUND,0     # Black
+#env = GUM_CONFIRM_SELECTED_BACKGROUND,2     # Green
+#env = GUM_CONFIRM_UNSELECTED_FOREGROUND,0   # Black
+#env = GUM_CONFIRM_UNSELECTED_BACKGROUND,8   # Dark grey
+
+
+misc {
+    disable_hyprland_logo = false
+    #force_default_wallpaper = 0  # Disables anime mascot wallpapers
+    disable_splash_rendering  = true
+    focus_on_activate = true
+    anr_missed_pings = 3
+    on_focus_under_fullscreen = 1
 }
