--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -3,10 +3,11 @@ source = ~/.config/hypr/darktheme.conf
 source = ~/.config/hypr/nvidiaenv.conf
 source = ~/.config/hypr/animations.conf
 source = ~/.config/hypr/looknfeel.conf
+source = ~/.config/hypr/envs.conf
 
 
 cursor {
-    no_hardware_cursors = true
+    no_hardware_cursors = false
 }
 
 
@@ -16,11 +17,6 @@ cursor {
 
 # See https://wiki.hypr.land/Configuring/Monitors/
 monitor=,preferred,auto,1.25
-
-xwayland {
-  force_zero_scaling = true
-}
-
 env = GDK_SCALE,1.25
 
 ###################
@@ -44,20 +40,8 @@ $menu = wofi --show drun
 
  exec-once = $terminal
  exec-once = nm-applet &
- exec-once = hyprpaper & mako &
- exec-once = hypridle
+ exec-once = mako &
 
-
-#############################
-### ENVIRONMENT VARIABLES ###
-#############################
-
-# See https://wiki.hypr.land/Configuring/Environment-variables/
-
-env = XCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
-env = XDG_MENU_PREFIX,arch-
-env = WLR_NO_HARDWARE_CURSORS,1
 
 
 ###################
