--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -9,7 +9,7 @@
 # you can get started by copying this config to ~/.config/hypr/hyprlock.conf
 #
 
-$font = Monospace
+$font = JetBrainsMonoNerdFont,Monospace
 
 general {
     hide_cursor = false
@@ -54,7 +54,7 @@ input-field {
     rounding = 15
 
     font_family = $font
-    placeholder_text = Input password...
+    placeholder_text = Input password... =>
     fail_text = $PAMFAIL
 
     # uncomment to use a letter instead of a dot to indicate the typed password
