--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -185,7 +185,7 @@
             "car": "",
             "default": ["", "", ""]
         },
-        "on-click": "hyprpwcenter"
+        "on-click": "pavucontrol"
     },
       "pulseaudio/slider": {
     "min": 0,
