changes to hyprland and wofi
add: audio config  selector script for wofi
add: bind for audio config selector and clear all mako notification

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -148,6 +148,8 @@ bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod SHIFT,T, exec,$terminal -e btop
 bindd = $mainMod, F, Full screen, fullscreen, 0
 bindd = $mainMod ALT, F, Full width, fullscreen, 1
+bind = $mainMod, period ,exec,makoctl dismiss -a
+bind =$mainMod SHIFT, o ,exec, ~/.config/wofi/scripts/audio-selector.sh
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
