--- a/fastfetch/.config/fastfetch/config.jsonc
+++ b/fastfetch/.config/fastfetch/config.jsonc
@@ -4,7 +4,7 @@
   "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
   "logo": {
     "type": "kitty-icat",
-    "source": "~/Downloads/fireplace.gif",
+    "source": "~/.config/wallpaper/fireplace.gif",
     "height": null,
     "width": 65
   },
