remove omarchy backup configs

--- a/hypr/.config/hypr/envs.conf
+++ b/hypr/.config/hypr/envs.conf
@@ -18,7 +18,7 @@ env = MOZ_ENABLE_WAYLAND,1
 env = ELECTRON_OZONE_PLATFORM_HINT,wayland
 env = OZONE_PLATFORM,wayland
 env = XDG_SESSION_TYPE,wayland
-
+env = GTK_THEME,Adwaita:dark
 
 # Allow better support for screen sharing (Google Meet, Discord, etc)
 env = XDG_CURRENT_DESKTOP,Hyprland
@@ -26,8 +26,8 @@ env = XDG_SESSION_DESKTOP,Hyprland
 
 
 
-env = GTK_THEME,Adwaita:dark
-
+# so that install/update ing KDE packages wont break default program in dolphin, more info : https://www.lorenzobettini.it/2024/05/fixing-the-empty-open-with-in-dolphin-in-hyprland/
+env = XDG_MENU_PREFIX,arch-
 
 xwayland {
   force_zero_scaling = true
