--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -5,7 +5,6 @@ source = ~/.config/hypr/animations.conf
 source = ~/.config/hypr/looknfeel.conf
 source = ~/.config/hypr/envs.conf
 
-
 cursor {
     no_hardware_cursors = false
 }
@@ -29,6 +28,7 @@ env = GDK_SCALE,1.25
 $terminal = kitty
 $fileManager = dolphin
 $menu = wofi --show drun
+$browser = firefox
 
 
 #################
@@ -149,7 +149,8 @@ bind = $mainMod SHIFT,T, exec,$terminal -e btop
 bindd = $mainMod, F, Full screen, fullscreen, 0
 bindd = $mainMod ALT, F, Full width, fullscreen, 1
 bind = $mainMod, period ,exec,makoctl dismiss -a
-bind =$mainMod SHIFT, o ,exec, ~/.config/wofi/scripts/audio-selector.sh
+bind = $mainMod SHIFT, o ,exec, ~/.config/wofi/scripts/audio-selector.sh
+bind = $mainMod, B , exec , $browser
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
