add audio selector for wofi

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -27,7 +27,7 @@ env = GDK_SCALE,1.25
 # Set programs that you use
 $terminal = kitty
 $fileManager = dolphin
-$menu = wofi --show drun
+$menu = wofi -i --show drun
 $browser = firefox
 
 
@@ -84,6 +84,7 @@ $browser = firefox
 #     rounding = 0
 # }
 
+
 # See https://wiki.hypr.land/Configuring/Dwindle-Layout/ for more
 dwindle {
     pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
@@ -139,7 +140,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, C, killactive,
-bind = $mainMod, M, exec, command -v hyprshutdown >/dev/null 2>&1 && hyprshutdown || hyprctl dispatch exit
+#bind = $mainMod, M, exec, command -v hyprshutdown >/dev/null 2>&1 && hyprshutdown || hyprctl dispatch exit
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
@@ -151,6 +152,7 @@ bindd = $mainMod ALT, F, Full width, fullscreen, 1
 bind = $mainMod, period ,exec,makoctl dismiss -a
 bind = $mainMod SHIFT, o ,exec, ~/.config/wofi/scripts/audio-selector.sh
 bind = $mainMod, B , exec , $browser
+bind = $mainMod, M, exec , $terminal rmpc
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -216,6 +218,10 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 # See https://wiki.hypr.land/Configuring/Workspace-Rules/ for workspace rules
 
 # Example windowrules that are useful
+
+misc{
+initial_workspace_tracking = 2
+}
 
 windowrule {
     # Ignore maximize requests from all apps. You'll probably like this.
